<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <Spinner
        android:id="@+id/areas_sp_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/shape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/areas_et_width_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_width_rectangle_hint"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/areas_et_height_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_height_rectangle_hint"
            android:inputType="numberDecimal"
            android:padding="5dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/areas_et_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/areas_radius_circle_hint"
        android:inputType="numberDecimal"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/areas_et_width_tri"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_width_triangle_hint"
            android:inputType="numberDecimal"
            android:padding="5dp" />

        <EditText
            android:id="@+id/areas_et_height_tri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_height_triangle_hint"
            android:inputType="numberDecimal"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/areas_bu_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="calculate" />

    <TextView
        android:id="@+id/areas_tv_result"
        android:layout_width="match_parent"
        android:layout_height="163dp"

        android:layout_margin="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp" />

</LinearLayout>